Fixed overflow canceling

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -27,7 +27,6 @@ address {
 }
 
 //fixed right side white space on page (caused by container)
-html,
 body {
   width: 100%;
   overflow-x: hidden;
